Kubernetes/Gethomepage/yamls/traefik-gethomepage.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-gethomepage-basic-auth
  namespace: gethomepage
spec:
  basicAuth:
    secret: traefik-gethomepage-basic-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-gethomepage-https-redirect
  namespace: gethomepage
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-gethomepage-security
  namespace: gethomepage
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-gethomepage-websecure
  namespace: gethomepage 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gethomepage.domain.com`)
      services:
        - name: gethomepage
          port: 3000
            #          serversTransport: traefik-gethomepage-transport
      middlewares:
        - name: traefik-gethomepage-basic-auth
        - name: traefik-gethomepage-security
  tls:
    secretName: gethomepage-urbaman
    options:
      name: traefik-gethomepage-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-gethomepage-web
  namespace: gethomepage
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`gethomepage.domain.com`)
      services:
        - name: gethomepage
          port: 3000 
      middlewares:
        - name: traefik-gethomepage-https-redirect
